fix:overflow

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ html, body, figure, div, input, textarea, p, h1, h2, h3, h4, h5, h6, ul, summary
     box-sizing: border-box;
     list-style: none;
     list-style-type: none;
+    overflow: hidden;
 
 }
 body{
